supprimer une naissance
